@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/xev
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-apps/xev/ChangeLog,v 1.22 2008/10/03 08:41:50 armin76 Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/xev/ChangeLog,v 1.23 2009/04/03 13:28:47 ranger Exp $
+
+  03 Apr 2009; Brent Baude <ranger@gentoo.org> xev-1.0.3.ebuild:
+  Marking xev-1.0.3 ppc stable for bug 251832
 
   03 Oct 2008; Raúl Porcel <armin76@gentoo.org> xev-1.0.3.ebuild:
   Add ~ia64 wrt #237411
